[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llnw_sdk_python"
version = "0.1.3"
authors = [
  { name="Example Author", email="opensource@llnw.com" },
]
description = "Limelight Networks Python SDK"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
classifiers=[
        "Programming Language :: Python :: 3",
        "Development Status :: 4 - Beta",
        "License :: OSI Approved :: Apache Software License"
    ]

[project.urls]
"Homepage" = "https://github.com/llnw/llnw-sdk-python"
"Bug Tracker" = "https://github.com/llnw/llnw-sdk-python/issues"

